# libbag

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt  bag.cpp  unbag.cpp
test/: CMakeLists.txt  test.cpp
