set(BAG_EXECUTABLE_NAME bag)
set(BAG_EXECUTABLE_NAME ${BAG_EXECUTABLE_NAME} PARENT_SCOPE)
set(UNBAG_EXECUTABLE_NAME unbag)
set(UNBAG_EXECUTABLE_NAME ${UNBAG_EXECUTABLE_NAME} PARENT_SCOPE)

add_executable(${BAG_EXECUTABLE_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/bag.cpp)
target_link_libraries(${BAG_EXECUTABLE_NAME} PRIVATE ${LIBRARY_NAME})

add_executable(${UNBAG_EXECUTABLE_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/unbag.cpp)
target_link_libraries(${UNBAG_EXECUTABLE_NAME} PRIVATE ${LIBRARY_NAME})