set(TEST_NAME ${PROJECT_NAME}_test)
file(GLOB_RECURSE TEST_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

add_executable(${TEST_NAME} ${TEST_FILES})
target_link_libraries(${TEST_NAME} PRIVATE Catch2::Catch2WithMain ${LIBRARY_NAME})
add_test(NAME ${TEST_NAME} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${TEST_NAME})